[gd_scene load_steps=2 format=3 uid="uid://djhifrncvid1s"]

[ext_resource type="Script" uid="uid://cvr0spiuqfket" path="res://Menus/main_menu.gd" id="1_3g7qx"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_3g7qx")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Ocean" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Ocean"

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Ocean" to="." method="_on_ocean_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
